# Template-rust-stm32wle5

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
firmware/: Cargo.toml  README.md
firmware/src/: hardware.rs  main.rs  panic.rs
